[docs] Javadoc comments added for better undestanding